# cchs-security-frontend

./: CMakeLists.txt  Makefile  README  README.raspi  actions-raspi.c  actions.c  actions.h  backend-comms.c  backend-comms.h  crypto.c  door-monitor.c  door-monitor.h  door-system-formatted.c  door-system.c  door-system.h  format-card.cpp  ipc.c  local-settings.h.example  serialterm.c  settings.h  startdoor.sh  test-crypto.c
cmake/Modules/: FindBCM2835.cmake
extras/: door-system
include/: backend-comms.h  crypto.h  door-system.h  format-common.h  ipc.h
key-cutter/: cutter-gui.c  cutter-screens.c  cutter-screens.h  format-card.c  format-common.c
